fixing overflow on exercises table

--- a/resources/styles/components/task-plan/homework/exercises.less
+++ b/resources/styles/components/task-plan/homework/exercises.less
@@ -54,6 +54,16 @@ table.exercise-table {
     * + * {
       display: none;
     }
+
+    img {
+      display: block;
+      width: 100%;
+      padding: 20px;
+    }
+
+    span p:first-child {
+      display: inline;
+    }
   }
 
   td {
